# jar_analyzer

./: .gitignore  Makefile  OpenCode.md  README.md  pyproject.toml  requirements.txt  tasks.md
src/jar_analyzer/: __init__.py  db.py
src/jar_analyzer/indexer/: __init__.py  cli.py  scanner.py
src/jar_analyzer/ui/: __init__.py  cli.py
