[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jar_analyzer"
version = "0.1.0"
description = "A tool to analyze Java JAR files and search for classes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "prompt_toolkit>=3.0.0",
    "tqdm>=4.65.0",
    "click>=8.0.0",
]

[project.scripts]
jar-indexer = "jar_analyzer.indexer.cli:main"
jar-search = "jar_analyzer.ui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]